pi5-arm64/k8s/vault-warden/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: vaultwarden
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      name: postgres
